Don't use `--release`