@@ -47,10 +47,12 @@ java {
     languageVersion = JavaLanguageVersion.of(21)
   }
 }
-tasks.withType(JavaCompile).configureEach {
-  // Set the language level and byte code to 21.
-  options.release = 21
-}
+// Don't use --release because it is incompatible with --add-exports.
+// When making a release, it is essential to use the lowest possible Java version.
+// tasks.withType(JavaCompile).configureEach {
+//   // Set the language level and byte code to 21.
+//   options.release = 21
+// }
 
 
 jacocoTestReport {
